# digital_camera

./: CMakeLists.txt  README.md
cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake  enum_crsdk_hdr.cmake
obsbot/include/dev/: dev.hpp  devs.hpp
obsbot/include/util/: comm.hpp
sony/app/: CameraDevice.cpp  CameraDevice.h  ConnectionInfo.cpp  ConnectionInfo.h  CrDebugString.cpp  CrDebugString.h  FFmpegStreamer.h  MessageDefine.h  MjpegHttpServer.h  OpenCVWrapper.cpp  OpenCVWrapper.h  PropertyValueTable.cpp  RemoteCli.cpp
sony/app/CRSDK/: CameraRemote_SDK.h  CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h  ICrCameraObjectInfo.h  IDeviceCallback.h
sony/libs/opencv/Linux/: libopencv_highgui.so.408  libopencv_imgcodecs.so.408
src/: SonyCamera.cpp  SonyCamera.h  SonyCameraShutterWake.h  main.cpp  test.cpp
src/api/: AutoDocHelper.h  AutoDocMacro.h  BaseController.h  CameraController.h  DocController.h  UserController.h
src/camera/: SonyCamera.cpp  SonyCamera.h
src/utils/: NetworkUtils.h
